@@ -19,9 +19,11 @@ FSL_TEST_SUITE( host );
 
 FSL_TEST_FUNCTION( coerce_string ) {
     fostlib::host h1 = fostlib::coerce< fostlib::host >(
-        fostlib::string("localhost:80")
-    );
+        fostlib::string("localhost:80"));
     FSL_CHECK_EQ( h1.name(), "localhost" );
     FSL_CHECK( !h1.service().isnull() );
     FSL_CHECK_EQ( h1.service().value(), "80" );
+    
+    FSL_CHECK_EQ( fostlib::coerce< fostlib::string >(h1), "localhost:80" );
 }
+
