@@ -1,3 +1,6 @@
+2010-09-19  Kirit Saelensminde  <kirit@felspar.com>
+ fostlib::url::query_string objects can now be coerced from fostlib::string objects.
+
 2010-06-02  Kirit Saelensminde  <kirit@felspar.com>
  Fost authentication
  - Fixed the signature so that it signs the query string when there is
